5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1671_1100.log
== TEST (2019-04-24 14:31:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garça")
elif(x==10):
	print("Arara")
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	else:
		print("Animal: Invalido")
-- ERROR:
File "XXXX", line 18
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:31:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	else:
		print("Animal: Invalido")
-- ERROR:
File "XXXX", line 18
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:31:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:32:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.152724
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:33:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:33:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:33:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.224386
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:33:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:33:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input())
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.19759
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:34:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=(input("valor:"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:34:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=(input("valor:"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.150052
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:34:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=(input("valor:"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:35:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=(input("valor:"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")

	else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.145128
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 19
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:35:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=(input("valor:"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")

else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=input(":")
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")

else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=input(":")
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:37:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=input(":")
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:38:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input(":"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:38:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input(":"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.098609
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:38:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input(":"))
print("Entrada:",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:39:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input(":"))
print("Entrada: ",x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao-dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:40:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input(":"))
print("Entrada: ",x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:40:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input(":"))
print("Entrada: ",x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.143055
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
